oxref (0.91.00)

  * oxref now returns 0 when called with the -h or -v flags 

  * catching FBB::Errno in main.cc is superfluous: removed.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 25 Jan 2013 10:38:42 +0100

oxref (0.90.11)

  * The following #defines in INSTALL.im can be overruled by defining
    identically named environment variables: 
        CXX      defines the name of the compiler to use. By default `g++'
        CXXFLAGS the options passed to the compiler. 
                 By default `-Wall --std=c++0x -O2 -g'
        LDFLAGS  the options passed to the linker. By default no options are
                 passed to the linker.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 18 Jul 2012 15:19:38 +0200

oxref (0.90.10)

  * Depends on Bobcat 3.00.02
  
  * Removed superfluous header (undoing the needless 0.90.04 modification).

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 10 May 2012 14:02:07 +0200

oxref (0.90.04)

  * Added missing header

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 09 May 2012 13:45:58 +0200

oxref (0.90.03)

  * Fixed an out-of check placed newline insertion

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 09 Jan 2012 21:35:03 +0100

oxref (0.90.01)

  * Replaced FnWrap* calls by lambda functions

  * `build' script now recognizes CXXFLAGS and LDFLAGS for, resp. g++ and ld
     flags. Default values are in INSTALL.im, as before.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 24 Jun 2011 21:15:18 +0200

oxref (0.90.00)

  * Initial release

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 16 Feb 2011 11:50:25 +0100
