@@ -1,4 +1,4 @@
 #define AUTHOR  "Frank B. Brokken (f.b.brokken@rug.nl)"
-#define VERSION "0.91.00"
+#define VERSION "1.00.01"
 #define YEARS   "2012-2013"
 
